<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:text="@string/pub_sub_mensagem"
        android:background="@color/colorTitle"
        android:paddingBottom="10dp"
        android:padding="15dp"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="vertical"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nível alerta: " />

            <ImageButton
                android:layout_width="45dp"
                android:layout_height="match_parent"
                android:background="#FDF9F9"
                android:src="@android:drawable/presence_online"
                android:visibility="visible"
                tools:src="@android:drawable/presence_online"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/idA1"
                android:layout_width="36dp"
                android:layout_height="38dp"
                android:text="0" />

            <ImageButton
                android:layout_width="45dp"
                android:layout_height="match_parent"
                android:background="#FDF9F9"
                android:src="@android:drawable/presence_away"
                tools:src="@android:drawable/presence_away" />

            <TextView
                android:id="@+id/idA2"
                android:layout_width="36dp"
                android:layout_height="38dp"
                android:text="0" />

            <ImageButton
                android:layout_width="45dp"
                android:layout_height="match_parent"
                android:background="#FDF9F9"
                android:src="@android:drawable/presence_busy"
                tools:src="@android:drawable/presence_busy" />

            <TextView
                android:id="@+id/idA3"
                android:layout_width="36dp"
                android:layout_height="38dp"
                android:text="0" />
        </LinearLayout>
        <TextView
            android:layout_width="36dp"
            android:layout_height="38dp"
            android:labelFor="@id/mensagemEditText"
            android:text="@string/mensagem_para_publicar"
            android:visibility="invisible"
            tools:visibility="invisible" />


        <EditText
            android:id="@+id/mensagemEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Digite uma mensagem"
            android:inputType="text"
            android:visibility="invisible"
            tools:visibility="invisible" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/publicarButton"
            android:text="@string/publicar"
            android:textColor="@android:color/black"
            android:drawableTop="@drawable/ic_publish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:paddingTop="10dp"
            android:text="@string/mensagens"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:alpha="0.4"
                android:background="@drawable/logo"
                android:contentDescription="@string/lsdi_logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/mensagensTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingTop="10dp"
                android:textColor="@android:color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ListView
                android:id="@+id/listview"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </android.support.constraint.ConstraintLayout>

    </LinearLayout>

</LinearLayout>